프런트 > 단강좌 수정, 무료강좌 소스 수정

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1926,6 +1926,7 @@ table.auTable tr td {
 .willbes-Lec-buyBtn-sm {
     display: none;
     position: absolute;
+    z-index: 999;
 }
 .willbes-Lec-buyBtn-sm.active {
     display: block !important;
