--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1437,8 +1437,8 @@ table.auTable tr td {
 .list-drop-Box {
     top: 38px;
     left: 50%;
-    margin-left: -60px;
-    width: 120px;
+    margin-left: -65px;
+    width: 130px;
     padding: 20px;
     text-align: left;
 }
@@ -2283,6 +2283,10 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
 .tBox.light-gray a {
     border:1px solid #c9c9c9;
     color: #898989;
+}
+.tBox.t2Box {
+    height: 26px;
+    line-height: 26px;
 }
 
 /* subContainer : Content : lecInfoTable */
@@ -5677,6 +5681,21 @@ table.PassZoneTable .w-data {
 .willbes-Layer-PassBox .passzoneInfo li {
     line-height: 23px;
 }
+.willbes-Layer-PassBox540 {
+    width: 540px;
+    height: 400px;
+    top: 180px;
+    right: 65px;
+}
+.willbes-Layer-PassBox540 .userCouponTable {
+    height: 80px;
+}
+.willbes-Layer-PassBox740 {
+    width: 740px;
+    height: 800px;
+    top: 135px;
+    right: 65px;
+}
 .willbes-Layer-PassBox800 {
     width: 800px;
 }
@@ -5704,9 +5723,11 @@ table.PassZoneTable .w-data {
     float: left;
     margin-right: 5px;
 }
+
 .PASSZONE-List .willbes-Lec-Selected select {
     width: 90px;
 }
+
 .PASSZONE-List .willbes-Lec-Selected.willbes-Pass-Selected {
     margin-bottom: 30px;
 }
@@ -5716,16 +5737,22 @@ table.PassZoneTable .w-data {
 .PASSZONE-List .willbes-Lec-Selected.willbes-Pass-Selected .inputBox input {
     width: 260px;
 }
+
 .PASSZONE-List .PASSZONE-Lec-Wrap {
     border-top: 1px solid #959595;
     height: 730px;
     overflow-x: auto;
 }
+.PASSZONE-List .PASSZONE-Lec-Wrap tr th {
+    font-weight: 300 !important;
+}
+
 .PASSZONE-List .LeclistPASSTable {
     height: 255px;
     overflow-x: auto;
     border-top: 1px solid #959595;
 }
+
 .PASSZONE-List .PASSZONE-Lec-Section .passzone-Leclist {
     cursor: default;
 }
@@ -5743,6 +5770,25 @@ table.PassZoneTable .w-data {
 .PASSZONE-List .PASSZONE-Lec-Section button span {
     font-size: 12px;
 }
+.PASSZONE-List .PASSZONE-Lec-Section .Search-Result {
+    letter-spacing: 0;
+}
+.PASSZONE-List .PASSZONE-Lec-Section .w-btn {
+    display: block;
+    margin: 20px auto 50px;
+    width: 58px;
+    height: 24px;
+    line-height: 22px;
+    font-size: 11px;
+    color: #fff;
+    text-align: center;
+} 
+.PASSZONE-List .PASSZONE-Lec-Section .w-btn a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 .PASSZONE-List .PASSZONE-User-Tablets {
     text-align: center;
     height: 70px;
@@ -5772,15 +5818,14 @@ table.PassZoneTable .w-data {
 .PASSZONE-List .PASSZONE-User-Tablets dl dt.w-tit {
     font-size: 13px;
 }
-.PASSZONE-List tr th {
-    font-weight: 300 !important;
-}
+
 .PASSZONE-List .passzone-Leclist {
     cursor: pointer;
 }
 .PASSZONE-List .passzone-Lecinfo {
     display: none;
 }
+
 .PASSZONE-List .lecDetailWrap .w-btn {
     position: absolute;
     top: -8px; 
@@ -5796,6 +5841,7 @@ table.PassZoneTable .w-data {
     color: #fff;
     text-align: center;
 }
+
 .PASSZONE-List .tabBox {
     height: 180px;
     overflow-x: auto;
@@ -5818,24 +5864,33 @@ table.PassZoneTable .w-data {
     font-size: 12px;
     line-height: 18px;
 }
+
 .PASSZONE-List .passTable thead tr th {
     line-height: 22px;
     padding: 15px 0 15px 25px;
 }
-.PASSZONE-List .passTable-Select thead tr th {
-    line-height: 20px;
-    padding: 15px 0;
-}
-.LeclistTable .passTable-Select thead tr th .row-line {
-    margin: 4px 0;
-}
-.LeclistTable .passTable thead tr th .row-line {
+.PASSZONE-List .passTable thead tr th .row-line {
     background: #707070;
     float: inherit;
     width: 1px;
     height: 10px;
     margin: 0 8px 3px;
 }
+.PASSZONE-List .passTable-Select thead tr th {
+    line-height: 18px;
+    padding: 13px 0;
+}
+.PASSZONE-List .passTable-Select tbody tr td {
+    line-height: 25px;
+    padding: 7px 0;
+}
+.PASSZONE-List .passTable-Select .w-data input {
+    width: 80px;
+}
+.PASSZONE-List .passTable-Select thead tr th .row-line {
+    margin: 4px 0;
+}
+
 
 /* subContainer : Mypage : 무한PASS존 : willbes-Mypage-PASSZONE : willbes-Layer-PassBox : PASSZONE-Add */
 .PASSZONE-Add {
@@ -6072,8 +6127,8 @@ table.acadTable tr td {
 
 /* subContainer : Mypage : 결제관리 : orderTable */
 .orderTable.LeclistTable .listTable tr td {
-    line-height: 20px;
-    padding: 19px 0;
+    line-height: 25px;
+    padding: 20px 0;
 }
 .orderTable.LeclistTable .listTable .w-price {
     text-align: center;
