내강의실 > 학습지원관리 > 상담내역 read화면안 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4600,8 +4600,10 @@ ul li.profList .willbes-Layer-ProfileBox {
 .qnaTable .w-list img {
     margin-right: 10px;
 }
-.qnaTable .w-list .subTit {
+.qnaTable .w-list .subTit,
+.w-list .w-subtit {
     font-size: 11px;
+    font-weight: 300;
     color: #959595;
     line-height: 15px;
     padding-bottom: 10px;
