--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1496,7 +1496,7 @@ table.auTable tr td {
 
 /* subContainer : Depth */
 .Depth {
-    padding-top: 40px;
+    padding-top: 25px;
     padding-bottom: 30px;
     letter-spacing: 0;
 }
@@ -1714,7 +1714,7 @@ table.auTable tr td {
 }
 .curriWrap tr td select {
     width: 700px;
-    height: 30px; 
+    height: 22px; 
 }
 .curriWrap ul.curriSelect li {
     float: left;
@@ -1735,8 +1735,8 @@ table.auTable tr td {
 /* subContainer : Content : Bnr */
 .willbes-Bnr {
     clear: both;
-    padding-top: 25px;
-    padding-bottom: 35px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* subContainer : Content : Lec-Search */
@@ -1811,7 +1811,7 @@ table.auTable tr td {
 
 /* subContainer : Content : Lec */
 .willbes-Lec {
-    margin-bottom: 65px;
+    margin-bottom: 45px;
 }
 
 /* subContainer : Content : Lec-Subject */
@@ -1836,7 +1836,6 @@ table.auTable tr td {
 .willbes-Lec-Profdata {
     background: #f9f9f9;
     height: 115px;
-    margin-top: 25px;
 }
 .willbes-Lec-Profdata ul li {
     float: left;
@@ -2883,6 +2882,10 @@ table.classTable tr td.w-data {
     height: 22px;
     margin: 0;
 }
+.LeclistTable .listTable tr td.w-list a {
+    display: block;
+}
+
 .LeclistTable .listTable .w-chk input[type="checkbox"] {
     cursor: pointer;
 }
@@ -2936,6 +2939,9 @@ table.classTable tr td.w-data {
 .LecViewTable .w-txt.answer {
     height: 200px;
 }
+.prevnextTable tr:first-child td {
+    border: none;
+}
 
 /* subContainer : Content : 강의목차 : LecWriteTable */
 .LecWriteTable .listTable {
@@ -2963,7 +2969,7 @@ table.classTable tr td.w-data {
     margin: 14px 0;
 }
 .LecWriteTable tr td.w-selected select {
-    width: 220px;
+    width: 360px;
     height: 25px;
 }
 .LecWriteTable tr td.w-selected.full select {
@@ -4012,7 +4018,7 @@ table.finTable .row-line {
     font-size: 20px;
     font-weight: 600;
     line-height: 32px;
-    padding: 80px 0 20px 15px;
+    padding: 30px 0 20px 15px;
 }
 
 /* subContainer : Prof : profList */
@@ -4293,7 +4299,6 @@ ul li.profList .willbes-Layer-ProfileBox {
     right: 0;
     z-index: 101;
     width: 890px;
-    height: 1310px;
     border: 1px solid #2f2f2f;
     padding: 20px 25px 30px;
 }
@@ -4306,7 +4311,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 0;
-    padding: 20px 0 30px;
+    padding: 20px 0 25px;
     border-bottom: 2px solid #000;
 }
 .willbes-Layer-ReplyBox .Layer-SubTit {
@@ -4340,11 +4345,17 @@ ul li.profList .willbes-Layer-ProfileBox {
     line-height: 36px;
 }
 .willbes-Layer-ReplyBox .replyInfo {
-    padding-bottom: 40px;
+    padding-bottom: 25px;
 }
 .willbes-Layer-ReplyBox .replyInfo li {
     font-weight: 600;
     line-height: 20px;
+}
+.willbes-Layer-ReplyBox .willbes-Lec-Search .inputBox {
+    position: absolute;
+    left: 50%;
+    width: 340px;
+    margin-left: -170px;
 }
 
 /* subContainer : Prof : writeTable */
@@ -4358,14 +4369,13 @@ ul li.profList .willbes-Layer-ProfileBox {
 /* subContainer : Prof : replyTable */
 .LeclistTable .replyTable tbody tr th,
 .LeclistTable .replyTable tbody tr td {
-    line-height: 19px;
+    line-height: 30px;
     padding: 15px 0;
 }
 .LeclistTable .replyTable tr td .subTit {
     font-size: 11px;
     color: #959595;
     line-height: 15px;
-    padding-bottom: 10px;
 }
 .LeclistTable .w-replyList {
     cursor: pointer;
@@ -4381,6 +4391,9 @@ ul li.profList .willbes-Layer-ProfileBox {
 .LeclistTable .w-replyTxt td div {
     padding-bottom: 5px;
 }
+.btnAuto120.h27 {
+    line-height: 25px;
+}
 
 /* subContainer : Prof : sliderBest */
 .sliderBest .best-tit {
@@ -4391,11 +4404,14 @@ ul li.profList .willbes-Layer-ProfileBox {
     border-bottom: 1px solid #979797;
 }
 .sliderBest .bx-wrapper {
-    height: 65px;
+    height: 120px;
+}
+.sliderBest .bx-viewport {
+    height: 120px !important;
 }
 .sliderBest .sliderControls {
     width: 520px;
-    height: 65px;
+    height: 120px;
 }
 .sliderBest .bx-wrapper .bx-controls {
     top: -26px;
@@ -4560,12 +4576,12 @@ ul li.profList .willbes-Layer-ProfileBox {
 /* subContainer : Prof : 공지사항 */
 .oBox {
     display: inline-block;
-    width: 37px;
-    height: 15px;
-    font-size: 10px;
+    width: 40px;
+    height: 17px;
+    font-size: 11px;
     font-weight: 300;
     color: #fff;
-    line-height: 15px;
+    line-height: 17px;
     text-align: center;  
 }
 .offlineBox {
@@ -4581,7 +4597,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     background: #4b9e2b;
 }
 .willbes-Lec-Selected {
-    margin: 20px 0;
+    margin: 10px 0 20px;
 }
 .willbes-Lec-Selected select {
     width: 92px;
@@ -4594,7 +4610,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     background: #ecf8fc;
 }
 .qnaTable .w-list img {
-    margin-right: 10px;
+    margin-right: 5px;
 }
 .qnaTable .w-list .subTit,
 .w-list .w-subtit {
@@ -4606,11 +4622,11 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .aBox {
     display: inline-block;
-    width: 52px;
-    height: 22px;
-    font-size: 11px;
+    width: 57px;
+    height: 24px;
+    font-size: 12px;
     font-weight: 300;
-    line-height: 20px;
+    line-height: 22px;
     text-align: center;  
 }
 .waitBox {
@@ -4679,12 +4695,14 @@ ul li.profList .willbes-Layer-ProfileBox {
     float: left;
     margin-right: 5px;
 }
-.willbes-Lec-Selected .search-Btn {
-    margin-top: -10px;
-}
 .willbes-Leclist .search-Btn ul li {
     float: left;
     margin-right: 10px;
+}
+.search-Btn .center {
+    position: absolute;
+    left: 50%;
+    margin-left: -45px;
 }
 
 
